--- a/artifacts/acvp_sub_kdf135_srtp.html
+++ b/artifacts/acvp_sub_kdf135_srtp.html
@@ -377,8 +377,10 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
-<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported SP800-135 KDF Algorithms"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported SP800-135 SRTP KDF Methods"/>
+<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Required Prerequisite Algorithms for KDF135 SRTP Validations"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 KDF135 SRTP Algorithm Capabilities JSON Values"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported SP800-135 KDF Algorithms"/>
+<link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported SP800-135 SRTP KDF Methods"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -458,8 +460,10 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
-<ul><li>2.1.   <a href="#rfc.section.2.1">Supported SP800-135 KDF Algorithms</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Supported SP800-135 SRTP KDF Methods</a></li>
+<ul><li>2.1.   <a href="#rfc.section.2.1">Required Prerequisite Algorithms for KDF135 SRTP Validations</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">KDF135 SRTP Algorithm Capabilities JSON Values</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Supported SP800-135 KDF Algorithms</a></li>
+<li>2.4.   <a href="#rfc.section.2.4">Supported SP800-135 SRTP KDF Methods</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -482,8 +486,63 @@
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
 <p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of SP800-135 SRTP KDF algorithms to the ACVP server.</p>
-<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for SP800-135 SRTP KDF algorithm capabilities:</p>
+<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each KDF algorithm capability advertised is a self-contained JSON object.</p>
+<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#prereq_algs" id="prereq_algs">Required Prerequisite Algorithms for KDF135 SRTP Validations</a></h1>
+<p id="rfc.section.2.1.p.1">Some KDF135 algorithm implementations rely on other cryptographic primitives.  For example, SRTP uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:</p>
 <div id="rfc.table.1"/>
+<div id="rereqs_table"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Required Prerequisite Algorithms JSON Values</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Valid Values</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">algorithm</td>
+      <td class="left">a prerequisite algorithm</td>
+      <td class="left">value</td>
+      <td class="left">AES</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">valValue</td>
+      <td class="left">algorithm validation number</td>
+      <td class="left">value</td>
+      <td class="left">actual number or "same"</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">prereqAlgVal</td>
+      <td class="left">prerequistie algorithm validation</td>
+      <td class="left">object with algorithm and valValue properties</td>
+      <td class="left">see above</td>
+      <td class="left">Yes</td>
+    </tr>
+  </tbody>
+</table>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#cap_ex" id="cap_ex">KDF135 SRTP Algorithm Capabilities JSON Values</a></h1>
+<p id="rfc.section.2.2.p.1">Each algorithm capability advertised is a self-contained JSON object using the following values.</p>
+<div id="rfc.table.2"/>
 <div id="caps_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>SP800-135 SRTP KDF Algorithm Capabilities JSON Values</caption>
@@ -501,7 +560,7 @@
       <td class="left">algorithm</td>
       <td class="left">The KDF to be validated</td>
       <td class="left">value</td>
-      <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
+      <td class="left">See <a href="#supported_algs">Section 2.3</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -512,10 +571,10 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">aesVal</td>
-      <td class="left">The AES validation number or implemented in same implementation</td>
-      <td class="left">value</td>
-      <td class="left">same or value</td>
+      <td class="left">prereqVals</td>
+      <td class="left">Prerequistie algorithm validations</td>
+      <td class="left">array of prereqAlgVal objects</td>
+      <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -529,7 +588,7 @@
       <td class="left">methods</td>
       <td class="left">Type of method or algorithm supported</td>
       <td class="left">array</td>
-      <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
+      <td class="left">See <a href="#supported_methods">Section 2.4</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -562,9 +621,9 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
-<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
-<p id="rfc.section.2.1.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
+<p id="rfc.section.2.2.p.2">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#supported_algs" id="supported_algs">Supported SP800-135 KDF Algorithms</a></h1>
+<p id="rfc.section.2.3.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -577,8 +636,8 @@
   <li>SNMP</li>
   <li>TPM</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-135 SRTP KDF Methods</a></h1>
-<p id="rfc.section.2.2.p.1">The following SP800-135 SRTP KDF methods may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-135 SRTP KDF Methods</a></h1>
+<p id="rfc.section.2.4.p.1">The following SP800-135 SRTP KDF methods may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -589,7 +648,7 @@
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual Key Derivation Function (KDF), such as SNMP, SSH,  etc.  This section describes the JSON schema for a test vector set used with SP800-135 SRTP KDF algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.2"/>
+<div id="rfc.table.3"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
@@ -641,7 +700,7 @@
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for SRTP is as follows:</p>
-<div id="rfc.table.3"/>
+<div id="rfc.table.4"/>
 <div id="vs_tg_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Group JSON Object</caption>
@@ -656,7 +715,7 @@
   <tbody>
     <tr>
       <td class="left">method</td>
-      <td class="left">The method used for the test vectors.  See <a href="#supported_methods">Section 2.2</a> for possible values</td>
+      <td class="left">The method used for the test vectors.  See <a href="#supported_methods">Section 2.4</a> for possible values</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -688,7 +747,7 @@
 </table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each SP800-135 SRTP KDF test vector.</p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.5"/>
 <div id="vs_tc_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -771,7 +830,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.5"/>
+<div id="rfc.table.6"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -811,7 +870,7 @@
   </tbody>
 </table>
 <p id="rfc.section.4.p.2">The following table describes the JSON object that represents a vector set response for SRTP.</p>
-<div id="rfc.table.6"/>
+<div id="rfc.table.7"/>
 <div id="vr_top_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -910,7 +969,7 @@
 
             {
                 "algorithm": "SRTP",
-                "aesVal": "123456",
+                "prereqVals" : [{"algorithm" : "AES", "valValue" : "123456"}],
 		"methods" : ["AES-128-CBC", "AES-192-CBC", "AES-256-CBC" ],
 		"kdr" : [ "all"]
             }
