Added explicit support for reseed-only option
Added schema elements and new examples for supporting reseed-only
options.

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-20" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-21" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 20, 2017</td>
+  <td class="right">March 21, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 21, 2017</td>
+  <td class="left">Expires: September 22, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 21, 2017.</p>
+<p>This Internet-Draft will expire on September 22, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -938,6 +938,18 @@
       <td class="left"/>
     </tr>
     <tr>
+      <td class="left">reSeed</td>
+      <td class="left">use reseeding</td>
+      <td class="left">value yes/no</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">entropyInputLen</td>
       <td class="left">entropy length</td>
       <td class="left">value </td>
@@ -1005,9 +1017,95 @@
     </tr>
   </tbody>
 </table>
+<p id="rfc.section.3.1.p.3">Note 9: According to SP 800-90A <a href="#SP800-90A">[SP800-90A]</a>, a DRBG implementation has two separate controls for determining the correct test procedure for handling addtional entropy and other data in providing prediction resistance assurances. Depending on the capabilities advertised by the predResistanceEnabled and reseedImplemented flags ACVP generates test data according to the following test scenarios:      </p>
+<div id="rfc.table.6"/>
+<div id="tests_table"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Procedures for Supported Prediction Resistance Options</caption>
+  <thead>
+    <tr>
+      <th class="left">Prediction Resistance Assurance  Options</th>
+      <th class="left">Test Procedure</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">"predResistanceEnabled" : "yes"; "reseedImplemented": "yes" </td>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Instantiate DRBG</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate but don't output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Uninstantiate</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">"predResistanceEnabled" : "no"; "reseedImplemented" : "yes"</td>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Instantiate DRBG</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Reseed</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate but don't output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Uninstantiate</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">"predResistanceEnabled" : "yes"/"no"; "reseedImplemented": "no"</td>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Instantiate DRBG</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate but don't output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Generate output</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">Uninstantiate</td>
+    </tr>
+  </tbody>
+</table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single vector to be processed by the ACVP client.  The following table describes the JSON elements for each test case.</p>
-<div id="rfc.table.6"/>
+<div id="rfc.table.7"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>DRBG Test Case JSON Object</caption>
@@ -1070,14 +1168,26 @@
     </tr>
     <tr>
       <td class="left">predResistanceInput</td>
-      <td class="left">array of additonal input/entropy input value pairs for prediction resistance testing. See <a href="#vs_prtc_table">Table 7</a></td>
+      <td class="left">array of additonal input/entropy input value pairs for prediction resistance testing. See <a href="#vs_prtc_table">Table 8</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">reseedInput</td>
+      <td class="left">array of additonal input/entropy input value pairs for reseeding testing. See <a href="#vs_prtc_table">Table 8</a></td>
       <td class="left">array</td>
       <td class="left">No</td>
     </tr>
   </tbody>
 </table>
 <p id="rfc.section.3.2.p.2">Each prediction resistance test group contains an array of one or more test vectors, typically two.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each DRBG predcition resistance test vector.</p>
-<div id="rfc.table.7"/>
+<div id="rfc.table.8"/>
 <div id="vs_prtc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Prediction Resistance Test Case JSON Object</caption>
@@ -1112,7 +1222,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.8"/>
+<div id="rfc.table.9"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1152,7 +1262,7 @@
   </tbody>
 </table>
 <p id="rfc.section.4.p.2">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each DRBG test vector.</p>
-<div id="rfc.table.9"/>
+<div id="rfc.table.10"/>
 <div id="vs_tr_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>DRBG Test Case Results JSON Object</caption>
@@ -1446,6 +1556,55 @@
                   ]
                 }
             </pre>
+<p id="rfc.section.B.p.4">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", option.</p>
+<pre>
+                {
+                  "version": "0.2",
+                  "vectorSetId": "1157",
+                  "algorithm": "hashDRBG",
+                  "mode": "SHA-256",
+                  "testGroups": [
+                    {
+                      "predResistance": "no",
+                      "entropyInputLen":"256",
+                      "nonceLen":"128",
+                      "persoStringLen":"256",
+                      "additionalInputLen":"256",
+                      "returnedBitsLen":"1024",                  
+                      "tests": [
+                        {
+                          "tcId": "3151",
+                          "entropyInput":"860d051cedbb935a32ef3ba4f4437cf67c1a85a46a13a7f4db382933629890a8",
+                          "nonce":"5813070f9774d21e644d64e8d291b511",
+                          "persoString":"545ba29faf1bb1bf26756782f9c1fa00170f47012b05168ad82565f594af46b1",
+                          "reseedInput" : [
+                               {"additionalInput":"95b082d603393b2207975607ac6b6472bd458c5d3d4727e1e92ebc031130231d",
+                                "entropyInput": "2e92955b17e7e76fc75a478ba88f5f5b805c42945cbbcf8c669b1996c52ae3af"},
+                               {"additionalInput" : "ddfa41eb363d76e3943689a13d31ebd38408f26d51a83289e3d52c2081b96ad0",
+                                "entropyInput" : ""}
+                               {"additionalInput" : "edb884991dd2507de07647901b8880d9db48b0f07d90a9ca8cb399581fa4dd55",
+                                "entropyInput" : ""}
+                            ]
+                          },
+                        {
+                          "tcId": "3152",
+                          "entropyInput" : "371d2944c9ace670684d34d0bdc2eb45b0193fa6e7ec216867d8eb83f1f34104",
+                          "nonce": "4bb34ab1e882d97687c3f8935913ee0f",
+                          "persoString" : "c5b03354a9fad34a8eb5bd28613ac34e48898979501b10ce92e9a46e19c6de42",
+                          "reseedInput" : [
+                             {"additionalInput" : "6e3fa8e58779fec2b5028b28fae40d25023d8d4725a91b132219fd3d3eb6e1f0",
+                              "entropyInput" : "afd7e6b0b48a526e896dab46cc9689fce20df47a0a50fad812f08b310b96bccf"},
+                             {"additionalInput" : "deb8ed574906115a3e46b822c86dbf59f33c78052451f3a68f0eb08973bc1047",
+                              "entropyInput" : ""}
+                             {"additionalInput" : "a554bb9b5986b89161332649dd400b2a157656f8a1a8cf4a8fb875fa3d568140",
+                              "entropyInput" : ""}
+                          ]
+                        }
+                      ]
+                    }
+                  ]
+                }
+            </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for ctrDRBG with 3KeyTDEA test results sent from the crypto module to the ACVP server.</p>
 <pre>
@@ -1495,6 +1654,23 @@
                        {
                             "tcId": "2152",
                             "returnedBits": "8a74a8c31ea4e6e62f8a77b45da8ec9d8b75e6813f15327c5beb8cb4b56b15e85f95ace34826f8da9048be7c800b33d6c4d3c6558b3e2e0ccfe867a2c6107dc7bacf513017c1a5bcb65ce16ed49aefe764ea7a13d36ceb7f9c443a0cb81f55abcc0c7b2d7d97858ee0b237a72364e826dd6b25df84914f2b354e03fd7fea758e"
+                       }
+                    ]
+                }
+            </pre>
+<p id="rfc.section.C.p.4">The following is a example JSON object for hashDRBG test results sent from the crypto module to the ACVP server.</p>
+<pre>
+                {
+                    "version": "0.2",
+                    "vectorSetId": "1157",
+                    "testResults": [
+                        {
+                            "tcId": "3151",
+                            "returnedBits ": "0eadc82746890ee0b6c20b10016e2fd037073d952ed075d1ad4c53f6971ee6405ec40f6fd090c639a800ab9092f537913608787fbc77efd0465a84688da189f14c0d2adba5953f07ea463f4a772bb1f52a3c589cd89231acf0ff06269611f7a908eb171143d5a78d0fb7dca8326d235f3f4f3f25a0a69f0a596d6dbac1eb0cdc"
+                        },
+                       {
+                            "tcId": "3152",
+                            "returnedBits": "6452be2ee730d7245b28efa7a0dcd50299aaa126c5aa6dc8be3ae1c75ff54c412b1776a4beba8cb7c7bf9e2ec8c7fe2de5f51c4d740e20f5d9bbef3b743c81b958e05880ad9bbc8794be156e6d4b2f6a826787ce1fb479e449a27aa99831eba6c0fc990eabff928fafa703619f85060090548e2a23911a1e5adec5ac15a29798"
                        }
                     ]
                 }
